Posta pasantia Brasil casi terminado, arregladas cuestiones de layout que no necesitaba

--- a/index.html
+++ b/index.html
@@ -1,122 +1,9 @@
 ---
 layout: page
-title: Hello World!
 ---
 {% include JB/setup %}
 
-<header class="jumbotron subhead" id="overview">
-	<h1>{{ page.title }}</h1>
-	<div class="subnav">
-		<ul class="nav nav-pills">
-			<li><a href="#update_author_attributes">Update Author Attributes</a></li>
-			<li><a href="#sample_posts">Sample Posts</a></li>
-			<li><a href="#todo">To-Do</a></li>
-		</ul>
-	</div>
-</header>
-
-<section id="update_author_attributes">
-<h2 id='update_author_attributes'>Update Author Attributes</h2>
-<p>In <code>_config.yml</code> remember to specify your own data:</p>
-
-<pre><code>title : My Blog =)
-
-author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username</code></pre>
-
-<p>The theme should reference these variables whenever needed.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-</section>
-
-<section id="sample_posts">
-<h2 id='sample_posts'>Sample Posts</h2>
-<p>This blog contains sample posts which help stage pages and blog data. When you don&#8217;t need the samples anymore just delete the <code>_posts/core-samples</code> folder.</p>
-
-<pre><code>$ rm -rf _posts/core-samples</code></pre>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-<ul class='posts'>
-  
-    <li><span>29 Feb 2012</span> &raquo; <a href='/2012/02/29/mi-pasantia-en-brazil'>Mi Pasantia en Brazil</a></li>
-  
-</ul>
-</section>
-
-<section id="todo">
-<h2 id='todo'>To-Do</h2>
-<p>This theme is still unfinished. If you&#8217;d like to be added as a contributor, <a href='http://github.com/plusjade/jekyll-bootstrap'>please fork</a>! We need to clean up the themes, make theme usage guides with theme-specific markup examples.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-</section>
-
-<h2>All Pages</h2>
 <ul>
-{% assign pages_list = site.pages %}
+{% assign pages_list = site.posts %}
 {% include JB/pages_list %}
 </ul>
