--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title : Archive
-header : Post Archive
+title : Posts
+header : Archivo de Posts
 group: navigation
 ---
 {% include JB/setup %}
