Adicionadas fotos y about.xhtml modificado

--- a/about.html
+++ b/about.html
@@ -5,107 +5,17 @@ group: navigation
 ---
 {% include JB/setup %}
 
-<h2 id='update_author_attributes'>Update Author Attributes</h2>
-<p>In <code>_config.yml</code> remember to specify your own data:</p>
-
-<pre><code>title : My Blog =)
-
-author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username</code></pre>
-
-<p>The theme should reference these variables whenever needed.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-</section>
-
-<section id="sample_posts">
-<h2 id='sample_posts'>Sample Posts</h2>
-<p>This blog contains sample posts which help stage pages and blog data. When you don&#8217;t need the samples anymore just delete the <code>_posts/core-samples</code> folder.</p>
-
-<pre><code>$ rm -rf _posts/core-samples</code></pre>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-<ul class='posts'>
-  
-    <li><span>29 Feb 2012</span> &raquo; <a href='/2012/02/29/mi-pasantia-en-brazil'>Mi Pasantia en Brazil</a></li>
-  
-</ul>
-</section>
-
-<section id="todo">
-<h2 id='todo'>To-Do</h2>
-<p>This theme is still unfinished. If you&#8217;d like to be added as a contributor, <a href='http://github.com/plusjade/jekyll-bootstrap'>please fork</a>! We need to clean up the themes, make theme usage guides with theme-specific markup examples.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-<p>Here&#8217;s a sample &#8220;posts list&#8221;.</p>
-
-
-<h2>All Pages</h2>
-<ul>
-{% assign pages_list = site.pages %}
-{% include JB/pages_list %}
-</ul>
+<div>
+      <ul class="thumbnails">
+        <li class="span3">
+          <a href="{{ ASSET_PATH }}img/foto_perfil.jpg" class="thumbnail">
+            <img src="{{ ASSET_PATH }}img/foto_perfil.jpg" alt="">
+          </a>
+        </li>
+	</ul>
+<h1>Hola, mi nombre es Julián Mayorga</h1>
+<p>Soy un <a href="http://www.innergeek.us/geek.html">geek</a>, me gustan muchas <a href="http://en.wikipedia.org/wiki/The_Big_Bang_Theory">cosas</a> <a href="http://en.wikipedia.org/wiki/Magic:_The_Gathering">geeks</a>, de hecho me gustan tanto que hasta elegí una profesión muy <a href="http://en.wikipedia.org/wiki/Software_engineering">geek, como es Ingeniería en Informática</a>.</p>
+<p>Soy argentino, y actualmente estoy haciendo mi práctica profesional en Brazil, podés leer más sobre eso <a href="{{ site.baseurl }}2012/03/12/estoy-haciendo-mi-pasantia-en-brasil-como-es-que-llegue-aca/">aquí</a></p>
+<h2>No muerdo!</h2>
+<p>Contactate conmigo para lo que sea, mi correo es <a href="mailto:mayorga.julian@gmail.com">mayorga.julian@gmail.com</a>, también me podés encontrar en <a href="http://ar.linkedin.com/in/julianmayorga">LinkedIn</a> y en <a href="http://facebook.com/elfacedeljuli">Facebook</a>.</p>
+</div>
