--- a/about.html
+++ b/about.html
@@ -6,16 +6,13 @@ group: navigation
 {% include JB/setup %}
 
 <div>
-      <ul class="thumbnails">
-        <li class="span3">
-          <a href="{{ ASSET_PATH }}img/foto_perfil.jpg" class="thumbnail">
-            <img src="{{ ASSET_PATH }}img/foto_perfil.jpg" alt="">
-          </a>
-        </li>
-	</ul>
 <h1>Hola, mi nombre es Julián Mayorga</h1>
 <p>Soy un <a href="http://www.innergeek.us/geek.html">geek</a>, me gustan muchas <a href="http://en.wikipedia.org/wiki/The_Big_Bang_Theory">cosas</a> <a href="http://en.wikipedia.org/wiki/Magic:_The_Gathering">geeks</a>, de hecho me gustan tanto que hasta elegí una profesión muy <a href="http://en.wikipedia.org/wiki/Software_engineering">geek, como es Ingeniería en Informática</a>.</p>
 <p>Soy argentino, y actualmente estoy haciendo mi práctica profesional en Brazil, podés leer más sobre eso <a href="{{ site.baseurl }}2012/03/12/estoy-haciendo-mi-pasantia-en-brasil-como-es-que-llegue-aca/">aquí</a></p>
 <h2>No muerdo!</h2>
-<p>Contactate conmigo para lo que sea, mi correo es <a href="mailto:mayorga.julian@gmail.com">mayorga.julian@gmail.com</a>, también me podés encontrar en <a href="http://ar.linkedin.com/in/julianmayorga">LinkedIn</a> y en <a href="http://facebook.com/elfacedeljuli">Facebook</a>.</p>
+<p>Contactate conmigo para lo que sea, mi correo es <a href="mailto:mayorga.julian@gmail.com">mayorga.julian@gmail.com</a>.</p>
+<p><a href="http://ar.linkedin.com/in/julianmayorga">
+	<img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x33.png" width="160" height="33" border="0" alt="View Julián Mayorga's profile on LinkedIn">
+</a>
+</p>
 </div>
