--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ group: navigation
 <div>
 <h1>Hola, mi nombre es Julián Mayorga</h1>
 <p>Soy un <a href="http://www.innergeek.us/geek.html">geek</a>, me gustan muchas <a href="http://en.wikipedia.org/wiki/The_Big_Bang_Theory">cosas</a> <a href="http://en.wikipedia.org/wiki/Magic:_The_Gathering">geeks</a>, de hecho me gustan tanto que hasta elegí una carrera muy <a href="http://en.wikipedia.org/wiki/Software_engineering">geek, como es Ingeniería en Informática</a>, estudio en la <a href="http://www.um.edu.ar">Universidad de Mendoza</a>.</p>
-<p>Soy argentino, y actualmente estoy haciendo mi práctica profesional en Brazil, podés leer más sobre eso <a href="{{ site.baseurl }}2012/03/12/estoy-haciendo-mi-pasantia-en-brasil-como-es-que-llegue-aca/">aquí</a></p>
+<p>Soy de Argentina, y actualmente estoy haciendo mi práctica profesional en Brazil, podés leer más sobre eso <a href="{{ site.baseurl }}2012/03/12/estoy-haciendo-mi-pasantia-en-brasil-como-es-que-llegue-aca/">aquí</a></p>
 <h2>No muerdo!</h2>
 <p>Contactate conmigo para lo que sea, mi correo es <a href="mailto:mayorga.julian@gmail.com">mayorga.julian@gmail.com</a>.</p>
 <p><a href="http://ar.linkedin.com/in/julianmayorga">
