--- a/index.html
+++ b/index.html
@@ -1,10 +1,53 @@
----
-layout: page
----
-{% include JB/setup %}
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>El Juli by JulianMayorga</title>
 
-<div class="hero-unit">
-        <h1>{{ site.posts.first.title }}</h1>
-        <p>{{ site.posts.first.brief }}</p>
-        <p><a class="btn btn-primary btn-large" href="{{ site.posts.first.url }}">M&aacutes &raquo;</a></p>
-</div>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>El Juli</h1>
+        <p>Wantrepreneur buscando alguna piedrita para ver si evoluciona en Entrepreneur</p>
+
+
+        <p class="view"><a href="https://github.com/JulianMayorga">View My GitHub Profile</a></p>
+
+      </header>
+      <section>
+        <h1>O sea, por qué escribiría acá?</h1>
+
+<p>Ya lo decía Einstein antes de que se inventaran los modems de 56K</p>
+
+<blockquote>
+<p>Siempre es bueno tener una paginita adónde queden grabados tus pensamientos así los leés después de un tiempo y te das cuenta de lo gil que eras y lo copado que sos ahora.</p>
+</blockquote>
+
+<p>Así que eso mismo pienso hacer acá, hacerme el copado... eh, digo, poner mis pensamientos para la posteridad, sin ningún tipo de filtro (bueno con un mínimo filtro).</p>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-29896762-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
+  </body>
+</html>
