--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>El Juli by JulianMayorga</title>
+    <title>El Juli</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -19,7 +19,7 @@
         <p>Wantrepreneur buscando alguna piedrita para ver si evoluciona en Entrepreneur</p>
 
 
-        <p class="view"><a href="https://github.com/JulianMayorga">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/JulianMayorga">Ver Mi Perfil de GitHub</a></p>
 
       </header>
       <section>
@@ -34,7 +34,7 @@
 <p>Así que eso mismo pienso hacer acá, hacerme el copado... eh, digo, poner mis pensamientos para la posteridad, sin ningún tipo de filtro (bueno con un mínimo filtro).</p>
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosteado en GitHub Pages &mdash; Tema por <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
