--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <section>
-  <h1>O sea, por qué escribiría acá?</h1>
+  <h1>A todo esto, por qué escribo acá?</h1>
 
   <p>Porque ya lo decía Einstein antes de que se inventaran los modems de 56K:</p>
 
@@ -11,4 +11,13 @@ layout: default
   </blockquote>
 
   <p>Así que eso mismo pienso hacer acá, hacerme el copado... eh, digo, poner mis pensamientos para la posteridad, sin ningún tipo de filtro (bueno con un mínimo filtro).</p>
+</section>
+
+<section>
+  <h1>Lo' Posts</h1>
+  <ul>
+    {% for post in site.posts %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
 </section>
