--- a/_posts/2012-03-12-estoy-haciendo-mi-pasantia-en-brasil-como-es-que-llegue-aca.html
+++ b/_posts/2012-03-12-estoy-haciendo-mi-pasantia-en-brasil-como-es-que-llegue-aca.html
@@ -4,9 +4,15 @@ title: "Estoy haciendo mi pasantia en Brasil, ¿cómo es que llegué aca?"
 ---
 <p>Soy una persona muy olvidadiza, eso siempre ha sido molesto, me olvido muy fácil de las cosas desde chico asi que he aprendido a vivir con ello. Pero hay dias en los que me levanto y en serio me pregunto ¿cómo llegué aca? Hoy es uno de esos dias, de repente estoy en una ciudad en Rio Grande do Sul, Brasil, acabo de cenar arroz con feijao con mis compañeros de departamento, y mañana me voy a levantar temprano para trabajar en una empresa de software local. Me parece que la mejor solución a mi falta de ubicacion es escribir sobre mi camino.</p>
 
-<p>Voy a empezar con una cita que me gusta mucho, dice “¿Querés pasar el resto de tu vida vendiendo agua azucarada o querés tener una oportunidad para cambiar el mundo?”, es una famosa pregunta que Steve Jobs le hizo a John Sculley, ex CEO de Apple, en ese entonces CEO de Pepsi. La verdad que nunca me dedique a vender gaseosa, y yo me considero uno de esos locos que creen que pueden cambiar el mundo, pero ahora quiero hablar de otra cosa, una oportunidad que tuve para que cambiarme a mi mismo, tanto personal como profesionalmente. Entonces, ¿cuándo es que decidí cambiar mi mundo?</p>
+<p>Voy a empezar con una cita que me gusta mucho, dice:</p>
 
-<p>(Este tema de que me olvido de las no es tan grave como suena, a veces es divertido exagerar un poco, en realidad soy una persona normal... bueno, no tanto :p</p>
+<blockquote>
+	<p>“¿Querés pasar el resto de tu vida vendiendo agua azucarada o querés tener una oportunidad para cambiar el mundo?”</p>
+</blockquote>
+
+<p>Es una famosa pregunta que Steve Jobs le hizo a John Sculley, ex CEO de Apple, en ese entonces CEO de Pepsi. La verdad que nunca me dedique a vender gaseosa, y yo me considero uno de esos locos que creen que pueden cambiar el mundo, pero ahora quiero hablar de otra cosa, una oportunidad que tuve para que cambiarme a mi mismo, tanto personal como profesionalmente. Entonces, ¿cuándo es que decidí cambiar mi mundo?</p>
+
+<p>(Este tema de que me olvido de las no es tan grave como suena, a veces es divertido exagerar un poco, en realidad soy una persona normal... bueno, no tanto :p )</p>
 
 <h2>La influencia de AIESEC</h2>
 
